[package]
name = "tree-sitter-show-ast"
version = "0.0.2"
edition = "2021"
authors = ["cncsmonster <cncsmonster@163.com>"]
description = "A tool to show tree-sitter ast of source code"
license = "MIT"
repository = "https://github.com/cncsmonster/tree-sitter-show-ast"

[[bin]]
name = "tree-sitter-show-ast"
path = "./src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
indoc = "2.0.5"
streaming-iterator = "0.1.9"
tree-sitter = "0.24.6"
tree-sitter-cpp = "0.23.4"
tree-sitter-rust = "0.23.2"
